objects/User_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comapny_Name__c</fullName>
        <label>Comapny Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <label>Error Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_Identifier__c</fullName>
        <label>Federation Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HireDate__c</fullName>
        <label>HireDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <label>Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Employee_Number__c</fullName>
        <label>Manager Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Employee_Number__c</fullName>
        <externalId>true</externalId>
        <label>OD Employee Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileId__c</fullName>
        <formula>User_Setting__r.Profile_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProfileId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reassgin_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reassgin Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <formula>User_Setting__r.Short_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending Manager</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Manager Error</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TermDate__c</fullName>
        <label>TermDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Setting</label>
        <referenceTo>User_Setting__c</referenceTo>
        <relationshipLabel>User Staging</relationshipLabel>
        <relationshipName>User_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Staging</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Checking_Email</fullName>
        <active>true</active>
        <description>Email cannot be &apos;not_available@officedepot.com&apos;</description>
        <errorConditionFormula>Email__c = &apos;not_available@officedepot.com&apos;</errorConditionFormula>
        <errorMessage>Email cannot be &apos;not_available@officedepot.com&apos;</errorMessage>
    </validationRules>
</CustomObject>